# itm-modelamiento-simulacion

./: README.md  pyproject.toml
2023-03-01-POO/: main.py
2023-03-01-POO/register/: person.py
2023-03-05-numpy/: main.py
2023-03-13/: main.py
2023-03-15/: main.ipynb
