[tool.poetry]
name = "itm-modelamiento-simulacion"
version = "0.1.0"
description = "uso numpy"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "itm_modelamiento_simulacion"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
